updating model formula with estimated values

--- a/Deep Forecasting/HW4- ARIMA and SARIMA.ipynb
+++ b/Deep Forecasting/HW4- ARIMA and SARIMA.ipynb
@@ -13578,7 +13578,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\hat{y}{\\prime}{\\prime}_t = \\hat{c} + \\hat{\\phi}1 \\hat{y}{\\prime}{\\prime}{t-1} + \\hat{\\theta}1 \\hat{\\epsilon}{t-1} + \\hat{\\epsilon}_t"
+    "y t′′ = 2.5+0.6yt−1′′− 0.3ϵt−1 + ϵt"
    ]
   },
   {
@@ -25297,7 +25297,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "myenv",
    "language": "python",
    "name": "python3"
   },
@@ -25311,7 +25311,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
