Cleaning up the files and organizing. Updated the readme

--- a/Business Intel and Analytics/production_schedule_v2.ipynb
+++ b/Business Intel and Analytics/production_schedule_v2.ipynb
@@ -144,15 +144,8 @@
     "        print(\"The problem does not have an optimal solution.\")\n",
     "\n",
     "# Call the function\n",
-    "optimize_production()\n"
+    "optimize_production()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
