saving the calculations to a file

--- a/Work/Supplemental Order.ipynb
+++ b/Work/Supplemental Order.ipynb
@@ -730,6 +730,15 @@
     "fulfilled_df.drop(columns=['Needed Quantity','Remaining Quantity'], inplace=True)\n",
     "fulfilled_df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fulfilled_df.to_csv('suppy.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
