filtering data to everything fulfilled

--- a/Work/Supplemental Order.ipynb
+++ b/Work/Supplemental Order.ipynb
@@ -584,7 +584,7 @@
    ],
    "source": [
     "# drop the rows with greater than 0 remaining quantity\n",
-    "fulfilled_df = fulfilled_df[fulfilled_df['Remaining Quantity'] == 0]\n",
+    "fulfilled_df = fulfilled_df[fulfilled_df['Fulfilled Quantity'] == 0]\n",
     "fulfilled_df"
    ]
   },
