reading in normal excel not macro enabled

--- a/Work/Supplemental Order.ipynb
+++ b/Work/Supplemental Order.ipynb
@@ -18,7 +18,7 @@
    "source": [
     "store_inventory = pd.read_csv('Supplemental Order Store Data.csv')\n",
     "forecast = pd.read_csv('Supplemental Order Forecast Data.csv')\n",
-    "available_inventory = pd.read_excel('Available Inventory.xlsm')"
+    "available_inventory = pd.read_excel('Available Inventory.xlsx')"
    ]
   },
   {
