updated code and added overviews

--- a/Work/Supplemental Order.ipynb
+++ b/Work/Supplemental Order.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,8 +22,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Calculating Total Pipeline"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,36 +49,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 17,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['store_number', 'store_name', 'storage_distribution_center_number',\n",
-       "       'distribution_center_number', 'all_links_item_description',\n",
-       "       'all_links_item_number', 'vendor_stock_id', 'walmart_item_number',\n",
-       "       'vendor_pack_quantity', 'store_in_transit_quantity_this_year',\n",
-       "       'store_in_warehouse_quantity_this_year',\n",
-       "       'store_on_hand_quantity_this_year', 'store_on_order_quantity_this_year',\n",
-       "       'valid_store_count_this_year', 'max_shelf_quantity_this_year',\n",
-       "       'total_pipeline'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "store_inventory.columns"
+    "## Calculating Needed Quantity"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,8 +126,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sorting by Item and then Needed Quantity\n",
+    "\n",
+    "This ensures that we send to the stores that need it most first."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -178,29 +173,57 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>586325247</th>\n",
-       "      <td>1108984</td>\n",
-       "      <td>626740</td>\n",
-       "      <td>287.0</td>\n",
+       "      <th>585320691</th>\n",
+       "      <td>646503</td>\n",
+       "      <td>280809</td>\n",
+       "      <td>122.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>586325330</th>\n",
-       "      <td>516789</td>\n",
-       "      <td>184214</td>\n",
-       "      <td>63.0</td>\n",
+       "      <th>597319350</th>\n",
+       "      <td>343525</td>\n",
+       "      <td>157238</td>\n",
+       "      <td>65.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>659879048</th>\n",
+       "      <td>1352448</td>\n",
+       "      <td>1381140</td>\n",
+       "      <td>903.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>663269028</th>\n",
+       "      <td>1605786</td>\n",
+       "      <td>1565045</td>\n",
+       "      <td>836.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>663269050</th>\n",
+       "      <td>1467075</td>\n",
+       "      <td>1494468</td>\n",
+       "      <td>952.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>663398046</th>\n",
+       "      <td>3261013</td>\n",
+       "      <td>3366958</td>\n",
+       "      <td>2060.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                          Item   Store  Needed Quantity\n",
-       "All Links Item Number                                  \n",
-       "586325247              1108984  626740            287.0\n",
-       "586325330               516789  184214             63.0"
+       "                          Item    Store  Needed Quantity\n",
+       "All Links Item Number                                   \n",
+       "585320691               646503   280809            122.0\n",
+       "597319350               343525   157238             65.0\n",
+       "659879048              1352448  1381140            903.0\n",
+       "663269028              1605786  1565045            836.0\n",
+       "663269050              1467075  1494468            952.0\n",
+       "663398046              3261013  3366958           2060.0"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,157 +238,27 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 20,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Item</th>\n",
-       "      <th>Store</th>\n",
-       "      <th>Needed Quantity</th>\n",
-       "      <th>All Links Item Number</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1589</th>\n",
-       "      <td>4138</td>\n",
-       "      <td>2539</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>586325247</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1594</th>\n",
-       "      <td>4138</td>\n",
-       "      <td>2274</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>586325247</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1602</th>\n",
-       "      <td>4138</td>\n",
-       "      <td>1346</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>586325247</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1626</th>\n",
-       "      <td>4138</td>\n",
-       "      <td>6286</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>586325247</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1629</th>\n",
-       "      <td>4138</td>\n",
-       "      <td>1405</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>586325247</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>131</th>\n",
-       "      <td>8203</td>\n",
-       "      <td>2310</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>586325330</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>150</th>\n",
-       "      <td>8203</td>\n",
-       "      <td>3093</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>586325330</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>156</th>\n",
-       "      <td>8203</td>\n",
-       "      <td>3570</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>586325330</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>179</th>\n",
-       "      <td>8203</td>\n",
-       "      <td>934</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>586325330</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>192</th>\n",
-       "      <td>8203</td>\n",
-       "      <td>5440</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>586325330</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>331 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      Item  Store  Needed Quantity  All Links Item Number\n",
-       "1589  4138   2539              2.0              586325247\n",
-       "1594  4138   2274              2.0              586325247\n",
-       "1602  4138   1346              2.0              586325247\n",
-       "1626  4138   6286              2.0              586325247\n",
-       "1629  4138   1405              2.0              586325247\n",
-       "...    ...    ...              ...                    ...\n",
-       "131   8203   2310              1.0              586325330\n",
-       "150   8203   3093              1.0              586325330\n",
-       "156   8203   3570              1.0              586325330\n",
-       "179   8203    934              1.0              586325330\n",
-       "192   8203   5440              1.0              586325330\n",
-       "\n",
-       "[331 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "needed_quantity_df"
+    "## Calculating the Fullfilled Amount"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[44071.]\n",
-      "[7406.]\n"
+      "5343:[0.]\n",
+      "5285:[1292.]\n",
+      "2304:[-1.]\n",
+      "2249:[-1.]\n",
+      "2325:[17.]\n",
+      "2341:[0.]\n"
      ]
     }
    ],
@@ -410,8 +303,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Finalizing the Dataset"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# drop the rows with greater than 0 remaining quantity\n",
+    "fulfilled_df = fulfilled_df[fulfilled_df['Fulfilled Quantity'] > 0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Overview of the Need and Fulfilled Quantity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -435,168 +352,63 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Item</th>\n",
-       "      <th>Store</th>\n",
        "      <th>Needed Quantity</th>\n",
-       "      <th>All Links Item Number</th>\n",
        "      <th>Fulfilled Quantity</th>\n",
-       "      <th>Remaining Quantity</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Item</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1589</th>\n",
-       "      <td>4138</td>\n",
-       "      <td>2539</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>586325247</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <th>2325</th>\n",
+       "      <td>19.0</td>\n",
+       "      <td>17.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1594</th>\n",
-       "      <td>4138</td>\n",
-       "      <td>2274</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>586325247</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1602</th>\n",
-       "      <td>4138</td>\n",
-       "      <td>1346</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>586325247</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1626</th>\n",
-       "      <td>4138</td>\n",
-       "      <td>6286</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>586325247</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1629</th>\n",
-       "      <td>4138</td>\n",
-       "      <td>1405</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>586325247</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>131</th>\n",
-       "      <td>8203</td>\n",
-       "      <td>2310</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>586325330</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>150</th>\n",
-       "      <td>8203</td>\n",
-       "      <td>3093</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>586325330</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>156</th>\n",
-       "      <td>8203</td>\n",
-       "      <td>3570</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>586325330</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>179</th>\n",
-       "      <td>8203</td>\n",
-       "      <td>934</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>586325330</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>192</th>\n",
-       "      <td>8203</td>\n",
-       "      <td>5440</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>586325330</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <th>5285</th>\n",
+       "      <td>65.0</td>\n",
+       "      <td>65.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>331 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      Item  Store  Needed Quantity  All Links Item Number  Fulfilled Quantity  \\\n",
-       "1589  4138   2539              2.0              586325247                 2.0   \n",
-       "1594  4138   2274              2.0              586325247                 2.0   \n",
-       "1602  4138   1346              2.0              586325247                 2.0   \n",
-       "1626  4138   6286              2.0              586325247                 2.0   \n",
-       "1629  4138   1405              2.0              586325247                 2.0   \n",
-       "...    ...    ...              ...                    ...                 ...   \n",
-       "131   8203   2310              1.0              586325330                 1.0   \n",
-       "150   8203   3093              1.0              586325330                 1.0   \n",
-       "156   8203   3570              1.0              586325330                 1.0   \n",
-       "179   8203    934              1.0              586325330                 1.0   \n",
-       "192   8203   5440              1.0              586325330                 1.0   \n",
-       "\n",
-       "      Remaining Quantity  \n",
-       "1589                 0.0  \n",
-       "1594                 0.0  \n",
-       "1602                 0.0  \n",
-       "1626                 0.0  \n",
-       "1629                 0.0  \n",
-       "...                  ...  \n",
-       "131                  0.0  \n",
-       "150                  0.0  \n",
-       "156                  0.0  \n",
-       "179                  0.0  \n",
-       "192                  0.0  \n",
-       "\n",
-       "[331 rows x 6 columns]"
+       "      Needed Quantity  Fulfilled Quantity\n",
+       "Item                                     \n",
+       "2325             19.0                17.0\n",
+       "5285             65.0                65.0"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# drop the rows with greater than 0 remaining quantity\n",
-    "fulfilled_df = fulfilled_df[fulfilled_df['Fulfilled Quantity'] > 0]\n",
-    "fulfilled_df"
+    "total_fulfilled_quantity = fulfilled_df.groupby(['Item']).sum()\n",
+    "total_fulfilled_quantity = total_fulfilled_quantity.drop(columns=['Store','All Links Item Number','Remaining Quantity'])\n",
+    "total_fulfilled_quantity"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exporting the Data as a CSV"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
     "# drop the columns that are not needed\n",
-    "fulfilled_df.drop(columns=['Needed Quantity','Remaining Quantity'], inplace=True)\n",
+    "fulfilled_df = fulfilled_df.drop(columns=['Needed Quantity','Remaining Quantity'])\n",
     "fulfilled_df\n",
     "\n",
     "fulfilled_df.to_csv('suppy.csv', index=False)"
