fixed error with creating files

--- a/Work/DC Push.ipynb
+++ b/Work/DC Push.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,7 @@
        "663398046              3261013  3366958  9724181.0  8625955.0           2060.0"
       ]
      },
-     "execution_count": 237,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -361,20 +361,20 @@
        "      <th>DC</th>\n",
        "      <th>Needed Quantity</th>\n",
        "      <th>All Links Item Number</th>\n",
-       "      <th>Fulfilled Quantity IDC</th>\n",
        "      <th>Fulfilled Quantity DC</th>\n",
+       "      <th>Fulfilled Quantity IDC</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>7730</th>\n",
+       "      <th>7797</th>\n",
        "      <td>5343</td>\n",
-       "      <td>154</td>\n",
-       "      <td>8980.0</td>\n",
-       "      <td>6039.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>990</td>\n",
+       "      <td>7067.0</td>\n",
+       "      <td>6011.0</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>585320691</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -433,17 +433,6 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15353</th>\n",
-       "      <td>2341</td>\n",
-       "      <td>1915</td>\n",
-       "      <td>6060.0</td>\n",
-       "      <td>7033.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>663398046</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>15412</th>\n",
        "      <td>2341</td>\n",
        "      <td>1555</td>\n",
@@ -451,8 +440,8 @@
        "      <td>7033.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>663398046</td>\n",
-       "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15438</th>\n",
@@ -462,8 +451,8 @@
        "      <td>7033.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>663398046</td>\n",
-       "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15456</th>\n",
@@ -473,7 +462,18 @@
        "      <td>7033.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>663398046</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15472</th>\n",
+       "      <td>2341</td>\n",
+       "      <td>1429</td>\n",
+       "      <td>8980.0</td>\n",
+       "      <td>6024.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>663398046</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -484,8 +484,8 @@
        "      <td>7033.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>663398046</td>\n",
-       "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -494,35 +494,35 @@
       ],
       "text/plain": [
        "       Item  Store     IDC      DC  Needed Quantity  All Links Item Number  \\\n",
-       "7730   5343    154  8980.0  6039.0              1.0              585320691   \n",
+       "7797   5343    990  7067.0  6011.0              2.0              585320691   \n",
        "7600   5343   1500  7078.0  6025.0              1.0              585320691   \n",
        "7601   5343   1534  7078.0  6025.0              1.0              585320691   \n",
        "7602   5343   1542  7078.0  6043.0              1.0              585320691   \n",
        "7603   5343   1546  7078.0  6009.0              1.0              585320691   \n",
        "...     ...    ...     ...     ...              ...                    ...   \n",
-       "15353  2341   1915  6060.0  7033.0              1.0              663398046   \n",
        "15412  2341   1555  6060.0  7033.0              1.0              663398046   \n",
        "15438  2341   1747  6060.0  7033.0              1.0              663398046   \n",
        "15456  2341   3350  6060.0  7033.0              1.0              663398046   \n",
+       "15472  2341   1429  8980.0  6024.0              1.0              663398046   \n",
        "15493  2341   2150  6060.0  7033.0              1.0              663398046   \n",
        "\n",
-       "       Fulfilled Quantity IDC  Fulfilled Quantity DC  \n",
-       "7730                      1.0                    0.0  \n",
-       "7600                      0.0                    0.0  \n",
-       "7601                      0.0                    0.0  \n",
-       "7602                      0.0                    0.0  \n",
-       "7603                      0.0                    0.0  \n",
-       "...                       ...                    ...  \n",
-       "15353                     1.0                    0.0  \n",
-       "15412                     1.0                    0.0  \n",
-       "15438                     1.0                    0.0  \n",
-       "15456                     1.0                    0.0  \n",
-       "15493                     1.0                    0.0  \n",
+       "       Fulfilled Quantity DC  Fulfilled Quantity IDC  \n",
+       "7797                     0.0                     0.0  \n",
+       "7600                     0.0                     0.0  \n",
+       "7601                     0.0                     0.0  \n",
+       "7602                     0.0                     0.0  \n",
+       "7603                     0.0                     0.0  \n",
+       "...                      ...                     ...  \n",
+       "15412                    0.0                     1.0  \n",
+       "15438                    0.0                     1.0  \n",
+       "15456                    0.0                     1.0  \n",
+       "15472                    0.0                     0.0  \n",
+       "15493                    0.0                     1.0  \n",
        "\n",
        "[3511 rows x 8 columns]"
       ]
      },
-     "execution_count": 240,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,14 +540,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Fixing the slice warning using .loc[]\n",
-    "sto_single = sto_single.loc[:, ~sto_single.columns.isin(['Fulfilled Quantity IDC', 'Needed Quantity', 'IDC'])]\n",
+    "sto_single = fulfilled_df.loc[:, ~fulfilled_df.columns.isin(['Fulfilled Quantity IDC', 'Needed Quantity', 'IDC'])]\n",
     "\n",
-    "sto_multi = sto_multi.loc[:, ~sto_multi.columns.isin(['Fulfilled Quantity DC', 'Needed Quantity', 'DC'])]"
+    "sto_multi = fulfilled_df.loc[:, ~fulfilled_df.columns.isin(['Fulfilled Quantity DC', 'Needed Quantity', 'DC'])]"
    ]
   },
   {
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +638,7 @@
        "5343            122.0              8.0"
       ]
      },
-     "execution_count": 247,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
