--- a/ml_framework.ipynb
+++ b/ml_framework.ipynb
@@ -36,7 +36,8 @@
     "- **Initial Data Inspection:**  \n",
     "  - Load the data and inspect its structure (e.g., using `data.info()`, `data.head()`, `data.nunique()`, and etc.).\n",
     "- **Quality Assessment:**  \n",
-    "  - Identify missing values, duplicates, and inconsistencies."
+    "  - Identify missing values, duplicates, and inconsistencies.\n",
+    "  - Don't assume it is clean - real world data is often messy"
    ]
   },
   {
@@ -58,7 +59,10 @@
     "- **Outlier Detection:**  \n",
     "  - Apply methods such as Z-score or IQR to detect anomalies.\n",
     "- **Deeper Insights:**  \n",
-    "  - Conduct additional statistical analyses to uncover trends or patterns."
+    "  - Conduct additional statistical analyses to uncover trends or patterns.\n",
+    "- **Watch Out for:**\n",
+    "  - Getting stuck in \"analysis paralysis\"\n",
+    "  - Ignoring domain knowledge when interpreting patterns"
    ]
   },
   {
@@ -83,7 +87,11 @@
     "  - Select important features using techniques like RFE or mutual information.\n",
     "  - Create new features through aggregations, ratios, or domain-specific transformations.\n",
     "- **Dataset Splitting:**  \n",
-    "  - Divide the data into training, validation, and testing sets."
+    "  - Divide the data into training, validation, and testing sets.\n",
+    "- **Watch Out For:**\n",
+    "  - Data Leakage\n",
+    "  - Improper encoding of categorical variables\n",
+    "  - Creating features that are highly corelated or redundant"
    ]
   },
   {
@@ -105,7 +113,11 @@
     "- **Hyperparameter Tuning:**  \n",
     "  - Use techniques like GridSearchCV, RandomizedSearchCV, or Bayesian Optimization.\n",
     "- **Cross-Validation:**  \n",
-    "  - Employ k-Fold for most tasks or TimeSeriesSplit for time series data."
+    "  - Employ k-Fold for most tasks or TimeSeriesSplit for time series data.\n",
+    "- **Watch Out For:**\n",
+    "  - Overfitting to the trainig data\n",
+    "  - Not tuning hyperparameters\n",
+    "  - Using cross validation incorrectly (especially in time series)\n"
    ]
   },
   {
@@ -125,7 +137,10 @@
     "- **Error Analysis:**  \n",
     "  - Review misclassified cases or high residual errors.\n",
     "- **Model Interpretation:**  \n",
-    "  - Use tools like SHAP values or permutation importance to understand feature contributions."
+    "  - Use tools like SHAP values or permutation importance to understand feature contributions.\n",
+    "- **Watch Out For:**\n",
+    "  - Relying on single metric\n",
+    "  - Ignoring error types"
    ]
   },
   {
